added after hosting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1> My Design part </h1>
-    <h3> Some more nice fetures</h3>
+    <h3> Some more nice fetureshit</h3>
+    <h2> Added after initial hosting</h2>
     
 </body>
 </html>
